blog/templates/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
